--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="screen"></div>
+        <div class="btn-container">
+            <button class="btn clear">C</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">+</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">-</button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">*</button>
+            <button class="btn">/</button>
+            <button class="btn">0</button>
+            <button class="btn">.</button>
+            <button class="btn equal">=</button>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
