--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <div class="calculator-container">
-        <div class="screen"></div>
+        <div class="screen">
+            <span class="zero">0</span>
+            <div class="display-info"></div>
+        </div>
         <div class="btn-container">
             <button class="btn clear">C</button>
-            <button class="btn">7</button>
-            <button class="btn">8</button>
-            <button class="btn">9</button>
-            <button class="btn">+</button>
-            <button class="btn">4</button>
-            <button class="btn">5</button>
-            <button class="btn">6</button>
-            <button class="btn">-</button>
-            <button class="btn">1</button>
-            <button class="btn">2</button>
-            <button class="btn">3</button>
-            <button class="btn">*</button>
-            <button class="btn">/</button>
-            <button class="btn">0</button>
+            <button class="btn num">7</button>
+            <button class="btn num">8</button>
+            <button class="btn num">9</button>
+            <button class="btn operator">+</button>
+            <button class="btn num">4</button>
+            <button class="btn num">5</button>
+            <button class="btn num">6</button>
+            <button class="btn operator">-</button>
+            <button class="btn num">1</button>
+            <button class="btn num">2</button>
+            <button class="btn num">3</button>
+            <button class="btn operator">*</button>
+            <button class="btn operator">/</button>
+            <button class="btn num">0</button>
             <button class="btn">.</button>
             <button class="btn equal">=</button>
         </div>
