added ability to perform operations using floats and integers

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="btn operator">*</button>
             <button class="btn operator">/</button>
             <button class="btn num">0</button>
-            <button class="btn">.</button>
+            <button class="btn dot">.</button>
             <button class="btn equal">=</button>
         </div>
     </div>
