--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <button class="btn operator">/</button>
             <button class="btn num">0</button>
             <button class="btn dot">.</button>
-            <button class="btn equal">=</button>
+            <div class="special-btns">
+                <button class="btn equal">=</button>
+                <button class="btn backspace">x</button>
+            </div>
+            
         </div>
     </div>
 
