fixed issue with calculation total not displaying when user presses enter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="btn-container">
             <button class="btn clear">C</button>
             <button class="btn negation">±</button>
-            <button class="btn backspace">x</button>
+            <button class="btn backspace"><img src="./images/backspace.png" alt=""></button>
             <button class="btn num">7</button>
             <button class="btn num">8</button>
             <button class="btn num">9</button>
